fix geologic layer reference

--- a/content/maps/vernon_county.html
+++ b/content/maps/vernon_county.html
@@ -175,7 +175,7 @@
         };
 
         var basemaps = [osm,relief,blank];
-        var overlays = [geologic,coe,blank];
+        var overlays = [coe,blank];
 
         var collection = new ol.Collection([osm.layer,coe.layer]);
         $('#osm').addClass('selected');
