--- a/content/maps/vernon_county.html
+++ b/content/maps/vernon_county.html
@@ -145,7 +145,7 @@
             })
         };
 
-        var basemaps = [osm,imagery,relief,blank];
+        var basemaps = [osm,relief,blank];
         var overlays = [coe,blank];
 
         var collection = new ol.Collection([osm.layer,coe.layer]);
