--- a/content/geog4046/final/index.html
+++ b/content/geog4046/final/index.html
@@ -5,8 +5,8 @@
     <title>Final Project - GEOG 4046</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.3.1/css/ol.css" type="text/css">
-    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.3.1/build/ol.js"></script>
+    <link rel="stylesheet" href="/theme/plugins/ol/6.15.1/ol.css" type="text/css">
+    <script src="/theme/plugins/ol/6.15.1/ol.js"></script>
     <script src="https://openlayers.org/en/v6.3.1/examples/resources/mapbox-streets-v6-style.js"></script>
     <link rel="stylesheet" href="map.css">
     
@@ -16,17 +16,18 @@
     <div class="info-panel">
         <div class="panel-title">
             <h3>Bar and Restaurant Ownership in the French Quarter and Marigny</h3>
-            <a href="https://www.notion.so/Bar-and-Restaurant-Ownership-in-the-French-Quarter-and-Marigny-cab89ab73c4349bab496200b59596600">about the map</a>
+            <a href="/bar-and-restaurant-ownership-in-the-french-quarter-and-marigny.html">about the map</a><br>
+            <em>data acquired May, 2020</em>
         </div>
+        <hr>
         <div class="panel-content">
-            <h4>business name</h4>
-            <p id="building-name"></p>
-            <h4>owner name</h4>
-            <p id="owner-name"></p>
-            <h4>businesses by same owner</h4>
-            <p id="related"></p>
+            <strong>business name</strong><br>
+            <span id="building-name">--</span><br>
+            <strong>owner name</strong></span><br>
+            <span id="owner-name">--</span><br>
+            <strong>businesses by same owner</strong><br>
+            <span id="related">--</span>
         </div>
-    
     </div>
     <div id="map"></div>
     <script src="map.js"></script>
