upgrade all jquery and use local asset

--- a/content/geog4046/final/index.html
+++ b/content/geog4046/final/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Final Project - GEOG 4046</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="/theme/plugins/jquery/3.7.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="/theme/plugins/ol/6.15.1/ol.css" type="text/css">
     <script src="/theme/plugins/ol/6.15.1/ol.js"></script>
