--- a/content/maps/natchitoches_parish.html
+++ b/content/maps/natchitoches_parish.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/theme/plugins/ol/3.5.0/ol.css" type="text/css">
 
         <!-- jquery -->
-        <script src="/theme/plugins/jquery/jquery.min.js"></script>
+        <script src="/theme/plugins/jquery/3.7.1/jquery.min.js"></script>
 
         <!-- local CSS -->
         <link rel="stylesheet" href="/theme/css/main.css">
@@ -83,7 +83,7 @@
             </div>
         </div>
 
-        <script src="https://code.jquery.com/jquery-latest.js"></script>
+        <script src="/theme/plugins/jquery/3.7.1/jquery.min.js"></script>
 
         <!-- OpenLayers CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.5.0/ol.css" type="text/css">
