--- a/content/geog4046/map3/index.html
+++ b/content/geog4046/map3/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Assignment 9 - GEOG 4046</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="/theme/plugins/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <link rel="stylesheet" href="map3.css">
