--- a/content/maps/afrh_historicmaps.html
+++ b/content/maps/afrh_historicmaps.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="/theme/plugins/ol/3.5.0/ol.css" type="text/css">
 
         <!-- jquery -->
-        <script src="/theme/plugins/jquery/jquery.min.js"></script>
+        <script src="/theme/plugins/jquery/3.7.1/jquery.min.js"></script>
 
         <!-- local CSS -->
         <link rel="stylesheet" href="/theme/css/main.css">
