--- a/content/maps/pelicoin/index.html
+++ b/content/maps/pelicoin/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
     <!-- include jquery -->
-    <script src="https://code.jquery.com/jquery-latest.js"></script>
+    <script src="/theme/plugins/jquery/3.7.1/jquery.min.js"></script>
     
     <!-- include leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
